--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,16 @@
     <title>Borrow My Bike Tool</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script>document.documentElement.classList.replace('nojs', 'js')</script>
-    <script>window.matchMedia("(prefers-reduced-motion: reduce)") ? null : document.documentElement.classList.replace('norm', 'rm');</script>
+    <script>window.matchMedia("(prefers-reduced-motion: reduce)").matches ? document.documentElement.classList.replace('norm', 'rm') : null;</script>
   </head>
   <body class="body">
+    <script>
+      const body=document.querySelector('.body');
+      body.style.opacity = 0;
+      window.addEventListener('load', (event) => {
+        body.style.opacity = 1;
+      });
+    </script>
     <main class="main">
       <nav class="viewport visually-hidden"></nav>
 
