cleanup scaffold and update xs-hide

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
       <section class="section-hero">
         <div class="section-content container">
-          <h1 class="headline display-1"><span class="hidden">Borrow</span> <span class="hidden">My</span><br class="xs-show" />&nbsp;<span class="hidden">Bike</span> <span class="hidden">Tool</span></h1>
+          <h1 class="headline display-1" role="text"><span class="hidden">Borrow</span> <span class="hidden">My</span><br class="xs-show" /><span class="xs-hide">&nbsp;</span><span class="hidden">Bike</span> <span class="hidden">Tool</span></h1>
           <picture class="hero-image hidden">
             <source srcset="images/hero/hero_large.jpg" media="(min-width: 1400px)">
             <source srcset="images/hero/hero_large_2x.jpg 2x" media="(min-width: 1400px)">
