update footer layout

--- a/src/index.html
+++ b/src/index.html
@@ -147,12 +147,14 @@
       </overlay>
     </main>
     <footer>
-      <p>Legaly; I take no responsibility for anything.</p>
-      <p>Image: <a href="https://thenounproject.com/search/?q=849831&i=849831">process</a> by Gregor Cresnar from the Noun Project.</p>
-      <p>Image: <a href="https://thenounproject.com/search/?q=309272&i=309272">Question</a> by Gianluca Lanzetta from the Noun Project.</p>
-      <p>Image: <a href="https://thenounproject.com/search/?q=1548345&i=1548345">FAQ</a> by sachin modgekar from the Noun Project.</p>
-      <p>Image: <a href="https://thenounproject.com/search/?q=3040061&i=3040061">Email</a> by popcornarts from the Noun Project.</p>
-      <p>Image: <a href="https://thenounproject.com/search/?q=1388489&i=1388489">tools</a> by i cons from the Noun Project.</p>
+      <div class="footer-content">
+        <p>Legaly; I take no responsibility for anything.</p>
+        <p>Image: <a href="https://thenounproject.com/search/?q=849831&i=849831">process</a> by Gregor Cresnar from the Noun&nbsp;Project.</p>
+        <p>Image: <a href="https://thenounproject.com/search/?q=309272&i=309272">Question</a> by Gianluca Lanzetta from the Noun&nbsp;Project.</p>
+        <p>Image: <a href="https://thenounproject.com/search/?q=1548345&i=1548345">FAQ</a> by sachin modgekar from the Noun&nbsp;Project.</p>
+        <p>Image: <a href="https://thenounproject.com/search/?q=3040061&i=3040061">Email</a> by popcornarts from the Noun&nbsp;Project.</p>
+        <p>Image: <a href="https://thenounproject.com/search/?q=1388489&i=1388489">tools</a> by i cons from the Noun&nbsp;Project.</p>
+      </div>
     </footer>
   </body>
 </html>
