add new hero copy

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script>document.documentElement.classList.replace('nojs', 'js')</script>
     <script>window.matchMedia("(prefers-reduced-motion: reduce)").matches ? document.documentElement.classList.replace('norm', 'rm') : null;</script>
-    <meta name="description" content="Borrow this bike tool for free, collect from North London or post to your house, fix your bike." />
+    <meta name="description" content="Borrow this bike tool (chain whip) for free, collect from North London or post to your house, fix your bike." />
     <meta property="og:image" content="images/og.png" />
     <meta property="og:title" content="Borrow My Bike Tool" />
-    <meta property="og:description" content="Borrow this bike tool for free, collect from North London or post to your house, fix your bike." />
+    <meta property="og:description" content="Borrow this bike tool (chain whip) for free, collect from North London or post to your house, fix your bike." />
   </head>
   <body class="body">
     <script>
@@ -42,7 +42,12 @@
             <source srcset="images/hero/hero_small.jpg">
             <source srcset="images/hero/hero_small_2x.jpg 2x">
             <img src="images/hero/hero_small.jpg" alt="Image of my bike tool" />
-        </picture>
+          </picture>
+          <div class="copy-wrapper">
+            <p class="copy h5 hidden">Hello internet, the tool in the picture above is mine, I use it once or twice a year and for the rest of the time it sits around and gets in the&nbsp;way.</p>
+            <p class="copy h5 hidden">If you want to borrow it then that's cool, get in touch<br class="xs-hide" /> and let's make it happen.</p>
+            <p class="copy h5 hidden">This is my new idea: <span class="nowrap">"Own less, live more"</span> let's&nbsp;go!</p>
+          </div>
         </div>
       </section>
 
@@ -98,13 +103,13 @@
           <ol>
             <li>I own this thing.</li>
             <li>I use it maybe a few times a year.</li>
-            <li>I don't want to sell it.</li>
+            <li>I don't want to sell&nbsp;it.</li>
             <li>I don't want to throw it away.</li>
             <li>I don't want to give it away.</li>
             <li>…but I still don't need it for let's say 361 days a year.</li>
           </ol>
           <p>I know it might get broken/stolen/lost but I think I'm OK with the risk.</p>
-          <p>It seems like the right thing to do, and it's interesting to see if people would borrow instead of&nbsp;buy.</p>
+          <p>Plus, it seems like the right thing to&nbsp;do.</p>
         </div>
       </overlay>
 
@@ -115,7 +120,7 @@
           <p>First of all we will agree when you can borrow it.</p>
           <p>The easiest thing is if we meet up; pick any café near Stoke Newington (London, UK).</p>
           <p>If you are miles away, then we can use the post - but you will have to cover the cost of postage there, and back to me when you are done.</p>
-          <p>And that's basically it, get in touch, borrow my bike tool and then fix your bike!</p>
+          <p>And that's basically it, get in touch, borrow my bike tool and fix your bike!</p>
         </div>
       </overlay>
 
@@ -142,12 +147,12 @@
             <li><span class="q">Will you post it?</span> : Yes, if you pay for postage and also send it back when you are done.</li>
             <li><span class="q">Will you add other tools?</span> : I guess it depends if anyone borrows this&nbsp;one.</li>
             <li><span class="q">How long can I borrow it for?</span> : As long as you need, but this is usually a quick&nbsp;fix.</li>
-            <li><span class="q">What if it breaks?</span> : That's OK, these things happen. If you feel bad you could buy me a new one and keep the project going! Or if enough people <em>donate</em> then I can buy another.</li>
-            <li><span class="q">Does it cost nothing?</span> : Yes, you borrow for no cost. You can <em>donate</em> if you want to support the project, but that's optional.</li>
+            <li><span class="q">What if it breaks?</span> : That's OK, these things happen. If you feel bad you could buy me a new one and keep the project going!</li>
+            <li><span class="q">Does it cost nothing?</span> : Yes, you borrow for no cost. You can <em>donate</em> if you want to support the project, but that's optional, and I haven't figured out how to do that&nbsp;yet.</li>
             <li><span class="q">Why are you doing this?</span> : It seems like the right thing to do, and it's interesting to see if people would borrow instead of&nbsp;buy.</li>
             <li><span class="q">Can I add my own tool to this site?</span> : No, but if you're keen to join in that's awesome, send me an email.</li>
             <li><span class="q">What if I hurt myself, or break my bike?</span> : I hope that doesn't happen, but from a legal point of view I don't take responsibility for anything you do with these tools.</li>
-            <li><span class="q">What's the goal of the project?</span> : It would be cool to help someone fix their bike, it would also be cool to lend this a lot and get enough donations to cover it's cost.</li>
+            <li><span class="q">What's your goal?</span> : It would be cool to help someone fix their bike.</li>
           </ul>
         </div>
       </overlay>
