--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,20 @@
         <div class="overlay-content">
           <div class="overlay-close"><button type="button" class="btn-close" data-overlay-close aria-label="Close"></button></div>
           <h2 class="overlay-headline">Say hi!</h2>
-          <p>Nothing too fancy here, just email: <a href="mailto:test@gmail.com">test@gmail.com</a></p>
+          <p>Thanks for trying to get in touch, you can use the form to send me a message.</p>
+          <p>Or you can try this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
+          <p>I look forward to hearing from you.</p>
+          <form name="contact" method="POST" data-netlify="true">
+            <div class="form-group">
+              <label for="inputEmail">Your email address:</label>
+              <input type="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="FormControlTextarea">Message:</label>
+              <textarea class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </overlay>
 
