--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <meta property="og:image" content="images/og.png" />
     <meta property="og:title" content="Borrow My Bike Tool" />
     <meta property="og:description" content="Borrow this bike tool (chain whip) for free, collect from North London or post to your house, fix your bike." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.borrowmybiketool.com/" />
   </head>
   <body class="body">
     <script>
