--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script>document.documentElement.classList.replace('nojs', 'js')</script>
     <script>window.matchMedia("(prefers-reduced-motion: reduce)").matches ? document.documentElement.classList.replace('norm', 'rm') : null;</script>
     <meta name="description" content="Borrow this bike tool (chain whip) for free, collect from North London or post to your house, fix your bike." />
+    <meta property="og:image" content="http://www.borrowmybiketool.com/og.png" />
     <meta property="og:image:secure_url" content="https://www.borrowmybiketool.com/og.png" />
     <meta property="og:title" content="Borrow My Bike Tool" />
     <meta property="og:description" content="Borrow this bike tool (chain whip) for free, collect from North London or post to your house, fix your bike." />
