--- a/src/index.html
+++ b/src/index.html
@@ -136,12 +136,14 @@
           <p>I look forward to hearing from you.</p>
           <form name="contact" method="POST" data-netlify="true">
             <div class="form-group">
-              <label for="inputEmail">Your email address:</label>
-              <input type="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
+              <label for="inputEmail">Your email address:
+                <input type="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
+              </label>
             </div>
             <div class="form-group">
-              <label for="FormControlTextarea">Message:</label>
-              <textarea class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
+              <label for="FormControlTextarea">Message:
+                <textarea class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
+              </label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
