--- a/src/index.html
+++ b/src/index.html
@@ -134,16 +134,14 @@
           <p>Thanks for trying to get in touch, you can use the form to send me a message.</p>
           <p>Or you can try this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
           <p>I look forward to hearing from you.</p>
-          <form name="contact" method="POST" data-netlify="true">
+          <form name="contact" method="POST" data-netlify="true" content-type="application/x-www-form-urlencoded">
             <div class="form-group">
-              <label for="inputEmail">Your email address:
-                <input type="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
-              </label>
+              <label for="inputEmail">Your email address:</label>
+              <input type="email" name="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
             </div>
             <div class="form-group">
-              <label for="FormControlTextarea">Message:
-                <textarea class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
-              </label>
+              <label for="FormControlTextarea">Message:</label>
+              <textarea name="message" class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
