copy update and modal feature update

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,8 @@
             <li>…but I still don't need it for let's say 361 days a year.</li>
           </ol>
           <p>I know it might get broken/stolen/lost but I think I'm OK with the risk.</p>
-          <p>Plus, it seems like the right thing to&nbsp;do.</p>
+          <p>It seems to me like a win -&nbsp;win situation, I don't have a tool sitting around, you don't have to buy one and leave it sitting around&nbsp;too.</p>
+          <p>And if you think about what it takes to manufacture and get a new tool to your front door, there are even more wins when we all start borrowing my bike tool.</p>
         </div>
       </overlay>
 
@@ -121,7 +122,7 @@
           <div class="overlay-close"><button type="button" class="btn-close" data-overlay-close aria-label="Close"></button></div>
           <h2 class="overlay-headline">How does this work?</h2>
           <p>First of all we will agree when you can borrow it.</p>
-          <p>The easiest thing is if we meet up; pick any café near Stoke Newington (London, UK).</p>
+          <p>The easiest thing is if we meet up; pick any café near Stoke Newington (London,&nbsp;UK).</p>
           <p>If you are miles away, then we can use the post - but you will have to cover the cost of postage there, and back to me when you are done.</p>
           <p>And that's basically it, get in touch, borrow my bike tool and fix your bike!</p>
         </div>
@@ -131,17 +132,26 @@
         <div class="overlay-content">
           <div class="overlay-close"><button type="button" class="btn-close" data-overlay-close aria-label="Close"></button></div>
           <h2 class="overlay-headline">Say hi!</h2>
-          <p>Thanks for trying to get in touch, you can use the form to send me a message.</p>
-          <p>Or you can try this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
-          <p>I look forward to hearing from you.</p>
-          <form name="contact" method="POST" data-netlify="true" content-type="application/x-www-form-urlencoded">
+          <p>Thanks for trying to get in touch, you can use the form to send in a message.</p>
+          <p>Or you can use this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
+          <p>I look forward to hearing from&nbsp;you.</p>
+          <form id="contact-form" name="contact" method="POST" data-netlify="true" content-type="application/x-www-form-urlencoded">
             <div class="form-group">
-              <label for="inputEmail">Your email address:</label>
-              <input type="email" name="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Enter email">
+              <label for="inputEmail">Contact email address:</label>
+              <input type="email" name="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Your email address - only if you want a reply">
             </div>
             <div class="form-group">
-              <label for="FormControlTextarea">Message:</label>
-              <textarea name="message" class="form-control" id="FormControlTextarea" rows="3" aria-label="enter your message"></textarea>
+              <label for="inputMessage">Message:</label>
+              <textarea name="message" class="form-control" id="inputMessage" rows="3" aria-label="enter your message" placeholder="Your message"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="inputKeepEmail">Do you want to get updates about this site?:</label>
+              <select name="keepEmail" id="inputKeepEmail">
+                <option value="yes" selected>Yes</option>
+                <option value="no">No</option>
+              </select>
+              <br />
+              <small id="emailHelp" class="form-text text-muted">I'll save your email address, let you know about major changes, and never share your details with anyone else.</small>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -152,7 +162,7 @@
         <div class="overlay-content">
           <div class="overlay-close"><button type="button" class="btn-close" data-overlay-close aria-label="Close"></button></div>
           <h2 class="overlay-headline">Questions?</h2>
-          <p>Here are the questions I have answers to, if you want to know something else then get in touch.</p>
+          <p>Here are the questions I have answers to, if you want to know something else then <a data-overlay-switch="contact" class="link"><span class="link-copy">get in touch</span></a>.</p>
           <ul>
             <li><span class="q">What's the tool?</span> : It's a chain whip, for changing the cassette (gears/cogs/sprocket) on the bikes back wheel.</li>
             <li><span class="q">How do I use a chain whip?</span> : Watch this video - <a href="https://youtu.be/7-MYHOpzT5A">https://youtu.be/7-MYHOpzT5A</a>.</li>
@@ -165,8 +175,8 @@
             <li><span class="q">How long can I borrow it for?</span> : As long as you need, but this is usually a quick&nbsp;fix.</li>
             <li><span class="q">What if it breaks?</span> : That's OK, these things happen. If you feel bad you could buy me a new one and keep the project going!</li>
             <li><span class="q">Does it cost nothing?</span> : Yes, you borrow for no cost. You can <em>donate</em> if you want to support the project, but that's optional, and I haven't figured out how to do that&nbsp;yet.</li>
-            <li><span class="q">Why are you doing this?</span> : It seems like the right thing to do, and it's interesting to see if people would borrow instead of&nbsp;buy.</li>
-            <li><span class="q">Can I add my own tool to this site?</span> : No, but if you're keen to join in that's awesome, send me an email.</li>
+            <li><span class="q">Why are you doing this?</span> : It seems like the right thing to&nbsp;do.</li>
+            <li><span class="q">Can I add my own tool to this site?</span> : No, but if you're keen to join in that's awesome, send me an <a data-overlay-switch="contact" class="link"><span class="link-copy">email</span></a>.</li>
             <li><span class="q">What if I hurt myself, or break my bike?</span> : I hope that doesn't happen, but from a legal point of view I don't take responsibility for anything you do with these tools.</li>
             <li><span class="q">What's your goal?</span> : It would be cool to help someone fix their bike.</li>
           </ul>
