restyle contact modal for small

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
           <h2 class="overlay-headline">How does this work?</h2>
           <p>First of all we will agree when you can borrow it.</p>
           <p>The easiest thing is if we meet up; pick any café near Stoke Newington (London,&nbsp;UK).</p>
-          <p>If you are miles away, then we can use the post - but you will have to cover the cost of postage there, and back to me when you are done.</p>
+          <p>If you are miles away, then we can use the post - but you will have to cover the cost of postage to you and then return it when you are done.</p>
           <p>And that's basically it, get in touch, borrow my bike tool and fix your bike!</p>
         </div>
       </overlay>
@@ -134,11 +134,12 @@
           <h2 class="overlay-headline">Say hi!</h2>
           <p>Thanks for trying to get in touch, you can use the form to send in a message.</p>
           <p>Or you can use this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
-          <p>I look forward to hearing from&nbsp;you.</p>
+          <p>Cheers</p>
+          <hr />
           <form id="contact-form" name="contact" method="POST" data-netlify="true" content-type="application/x-www-form-urlencoded">
             <div class="form-group">
               <label for="inputEmail">Contact email address:</label>
-              <input type="email" name="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Your email address - only if you want a reply">
+              <input type="email" name="email" class="form-control" id="inputEmail" aria-label="enter your email address" placeholder="Your email - only if you want a reply">
             </div>
             <div class="form-group">
               <label for="inputMessage">Message:</label>
@@ -151,7 +152,7 @@
                 <option value="no">No</option>
               </select>
               <br />
-              <small id="emailHelp" class="form-text text-muted">I'll save your email address, let you know about major changes, and never share your details with anyone else.</small>
+              <small id="emailHelp" class="form-text text-muted">I'll save your email address, let you know about major changes and never share your details with anyone else.</small>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -164,21 +165,21 @@
           <h2 class="overlay-headline">Questions?</h2>
           <p>Here are the questions I have answers to, if you want to know something else then <a data-overlay-switch="contact" class="link"><span class="link-copy">get in touch</span></a>.</p>
           <ul>
-            <li><span class="q">What's the tool?</span> : It's a chain whip, for changing the cassette (gears/cogs/sprocket) on the bikes back wheel.</li>
-            <li><span class="q">How do I use a chain whip?</span> : Watch this video - <a href="https://youtu.be/7-MYHOpzT5A">https://youtu.be/7-MYHOpzT5A</a>.</li>
-            <li><span class="q">Does it fit any make/bike?</span> : The chain whip is standard, but this lockring tool is for Schimano cassettes.</li>
-            <li><span class="q">Do you have product details?</span> : Yes, from amazon: <a href="https://www.amazon.co.uk/Silverline-241065-Single-Multi-Speed-Chains/dp/B00JBMS14K">Chain&nbsp;whip</a>, and <a href="https://www.amazon.co.uk/IceToolz-Cassette-Lockring-Tool-Shimano/dp/B0028N57UU">Lockring&nbsp;tool</a>.</li>
-            <li><span class="q">Will I need anything else to use it?</span> : Yes, you will need a spanner, torque wrench or socket wrench to fit the lockring tool.</li>
-            <li><span class="q">Can I collect it from your house?</span> : No, we can meet in a café near Stoke Newington (London,&nbsp;UK).</li>
-            <li><span class="q">Will you post it?</span> : Yes, if you pay for postage and also send it back when you are done.</li>
-            <li><span class="q">Will you add other tools?</span> : I guess it depends if anyone borrows this&nbsp;one.</li>
-            <li><span class="q">How long can I borrow it for?</span> : As long as you need, but this is usually a quick&nbsp;fix.</li>
-            <li><span class="q">What if it breaks?</span> : That's OK, these things happen. If you feel bad you could buy me a new one and keep the project going!</li>
-            <li><span class="q">Does it cost nothing?</span> : Yes, you borrow for no cost. You can <em>donate</em> if you want to support the project, but that's optional, and I haven't figured out how to do that&nbsp;yet.</li>
-            <li><span class="q">Why are you doing this?</span> : It seems like the right thing to&nbsp;do.</li>
-            <li><span class="q">Can I add my own tool to this site?</span> : No, but if you're keen to join in that's awesome, send me an <a data-overlay-switch="contact" class="link"><span class="link-copy">email</span></a>.</li>
-            <li><span class="q">What if I hurt myself, or break my bike?</span> : I hope that doesn't happen, but from a legal point of view I don't take responsibility for anything you do with these tools.</li>
-            <li><span class="q">What's your goal?</span> : It would be cool to help someone fix their bike.</li>
+            <li><span class="q">What's the tool?</span> : It's&nbsp;a chain whip, for changing the cassette (gears/cogs/sprocket) on the bikes back wheel.</li>
+            <li><span class="q">How do I use a chain whip?</span> : Watch&nbsp;this video - <a href="https://youtu.be/7-MYHOpzT5A">https://youtu.be/7-MYHOpzT5A</a>.</li>
+            <li><span class="q">Does it fit any make/bike?</span> : The&nbsp;chain whip is standard, but this lockring tool is for Schimano cassettes.</li>
+            <li><span class="q">Do you have product details?</span> : Yes,&nbsp;from amazon: <a href="https://www.amazon.co.uk/Silverline-241065-Single-Multi-Speed-Chains/dp/B00JBMS14K">Chain&nbsp;whip</a> and <a href="https://www.amazon.co.uk/IceToolz-Cassette-Lockring-Tool-Shimano/dp/B0028N57UU">Lockring&nbsp;tool</a>.</li>
+            <li><span class="q">Will I need anything else to use it?</span> : Yes,&nbsp;you will need a spanner, torque wrench or socket wrench to fit the lockring tool.</li>
+            <li><span class="q">Can I collect it from your house?</span> : No,&nbsp;we can meet in a café near Stoke Newington (London,&nbsp;UK).</li>
+            <li><span class="q">Will you post it?</span> : Yes,&nbsp;if you pay for postage and also send it back when you are done.</li>
+            <li><span class="q">Will you add other tools?</span> : I&nbsp;guess it depends if anyone borrows this&nbsp;one.</li>
+            <li><span class="q">How long can I borrow it for?</span> : As&nbsp;long as you need, but this is usually a quick&nbsp;fix.</li>
+            <li><span class="q">What if it breaks?</span> : That's&nbsp;OK, these things happen. If you feel bad you could buy me a new one and keep the project going!</li>
+            <li><span class="q">Does it cost nothing?</span> : Yes,&nbsp;you borrow for no cost. You can <em>donate</em> if you want to support the project, but that's optional and I haven't figured out how to do that&nbsp;yet.</li>
+            <li><span class="q">Why are you doing this?</span> : It&nbsp;seems like the right thing to&nbsp;do.</li>
+            <li><span class="q">Can I add my own tool to this site?</span> : No,&nbsp;but if you're keen to join in that's awesome, send me an <a data-overlay-switch="contact" class="link"><span class="link-copy">email</span></a>.</li>
+            <li><span class="q">What if I hurt myself, or break my bike?</span> : I&nbsp;hope that doesn't happen, but from a legal point of view I don't take responsibility for anything you do with these tools.</li>
+            <li><span class="q">What's your goal?</span> : It&nbsp;would be cool to help someone fix their bike.</li>
           </ul>
         </div>
       </overlay>
