update tiles to be links

--- a/src/index.html
+++ b/src/index.html
@@ -57,41 +57,41 @@
       <section class="section-more">
         <div class="section-content container">
           <div class="grid">
-            <div class="tile tile-1" data-scroll-target data-threshold="t+100px">
+            <div class="tile tile-1 tile-link" data-scroll-target data-threshold="t+100px" data-overlay-link="why">
               <h3 class="tile-headline">Why</h3>
               <picture class="tile-image">
                 <source srcset="images/300/noun_question_309272.png" media="(min-width: 1200px)">
                 <source srcset="images/200/noun_question_309272.png">
                 <img src="images/200/noun_question_309272.png"/>
               </picture>
-              <a data-overlay-link="why" class="link"><span class="link-copy">continue</span><span class="link-icon modal-open"></span></a>
+              <a data-overlay-link="why" class="link"><span class="link-copy">Continue</span><span class="link-icon modal-open"></span></a>
             </div>
-            <div class="tile tile-2" data-scroll-target data-threshold="t+100px" data-delay="350">
+            <div class="tile tile-2 tile-link" data-scroll-target data-threshold="t+100px" data-delay="350" data-overlay-link="how">
               <h3 class="tile-headline">How</h3>
               <picture class="tile-image">
                 <source srcset="images/300/noun_process_849831.png" media="(min-width: 1200px)">
                 <source srcset="images/200/noun_process_849831.png">
                 <img src="images/200/noun_process_849831.png"/>
               </picture>
-              <a data-overlay-link="how" class="link"><span class="link-copy">continue</span><span class="link-icon modal-open"></span></a>
+              <a class="link"><span class="link-copy">Continue</span><span class="link-icon modal-open"></span></a>
             </div>
-            <div class="tile tile-3" data-scroll-target data-threshold="t+100px">
+            <div class="tile tile-3 tile-link" data-scroll-target data-threshold="t+100px" data-overlay-link="contact">
               <h3 class="tile-headline">Get in Touch</h3>
               <picture class="tile-image">
                 <source srcset="images/300/noun_email_3040061.png" media="(min-width: 1200px)">
                 <source srcset="images/200/noun_email_3040061.png">
                 <img src="images/200/noun_email_3040061.png"/>
               </picture>
-              <a data-overlay-link="contact" class="link"><span class="link-copy">continue</span><span class="link-icon modal-open"></span></a>
+              <a class="link"><span class="link-copy">Continue</span><span class="link-icon modal-open"></span></a>
             </div>
-            <div class="tile tile-4" data-scroll-target data-threshold="t+100px" data-delay="350">
+            <div class="tile tile-4 tile-link" data-scroll-target data-threshold="t+100px" data-delay="350" data-overlay-link="faq">
               <h3 class="tile-headline visually-hidden">FAQ</h3>
               <picture class="tile-image">
                 <source srcset="images/300/noun_faq_1548345.png" media="(min-width: 1200px)">
                 <source srcset="images/200/noun_faq_1548345.png">
                 <img src="images/200/noun_faq_1548345.png"/>
               </picture>
-              <a data-overlay-link="faq" class="link"><span class="link-copy">continue</span><span class="link-icon modal-open"></span></a>
+              <a class="link"><span class="link-copy">Continue</span><span class="link-icon modal-open"></span></a>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@
       <overlay class="overlay hidden" data-overlay-name="contact">
         <div class="overlay-content">
           <div class="overlay-close"><button type="button" class="btn-close" data-overlay-close aria-label="Close"></button></div>
-          <h2 class="overlay-headline">Say hi!</h2>
+          <h2 class="overlay-headline">Say&nbsp;hi!</h2>
           <p>Thanks for trying to get in touch, you can use the form to send in a message.</p>
           <p>Or you can use this email address: <a href="mailto:hello@borrowmybiketool.com">hello@borrowmybiketool.com</a></p>
           <p>Cheers</p>
