fixes hidden space on xsmall

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           </picture>
           <div class="copy-wrapper">
             <p class="copy h5 hidden">Hello internet, the tool in the picture above is mine, I use it once or twice a year and for the rest of the time it sits around and gets in the&nbsp;way.</p>
-            <p class="copy h5 hidden">If you want to borrow it then get in touch<br class="xs-hide" /> and let's make it happen.</p>
+            <p class="copy h5 hidden">If you want to borrow it then get in touch<br class="xs-hide" />&nbsp;and let's make it happen.</p>
             <p class="copy h5 hidden">This is my new idea: <span class="nowrap">"Own less, live more"</span><br /> let's&nbsp;go!</p>
           </div>
         </div>
